// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render with default fixed values 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="checkboxValue-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps---font--2ipy Checkbox---checkbox--2kFy input StyledProps---main--1Wws"
              >
                <input
                  checked=""
                  name="checkboxValue"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                CheckBox
              </label>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            RadioGroup
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
              name="radioValue"
            >
              <div
                class="input"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name=""
                    type="radio"
                    value="option1"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 1
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    name=""
                    type="radio"
                    value="option2"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 2
                </label>
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            TextArea
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
            >
              <textarea
                class="bp3-input input"
              />
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render with default runtimeInput values 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="checkboxValue-0"
        >
          <label
            class="bp3-label"
            for="checkboxValue"
          >
            CheckBox
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw MultiTypeInput---disabled--3BqD"
            >
              <div
                class="TextInput---main--1ytZ"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput---input--36mQ"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    placeholder="\${input}"
                    type="text"
                    value="\${input}"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---RUNTIME--15lc"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="#9d7cff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            RadioGroup
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw MultiTypeInput---disabled--3BqD"
              name="radioValue"
            >
              <div
                class="TextInput---main--1ytZ"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput---input--36mQ"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    placeholder="\${input}"
                    type="text"
                    value="\${input}"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---RUNTIME--15lc"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="#9d7cff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            TextArea
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw MultiTypeInput---disabled--3BqD"
            >
              <div
                class="TextInput---main--1ytZ"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput---input--36mQ"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    placeholder="\${input}"
                    type="text"
                    value="\${input}"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---RUNTIME--15lc"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="#9d7cff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RuntimeInput Tests for checkbox, RadioGroup and Text Area should render without default values 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="checkboxValue-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
            >
              <label
                class="bp3-control bp3-checkbox StyledProps---font--2ipy Checkbox---checkbox--2kFy input StyledProps---main--1Wws"
              >
                <input
                  name="checkboxValue"
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                CheckBox
              </label>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="radioValue-1"
        >
          <label
            class="bp3-label"
            for="radioValue"
          >
            RadioGroup
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
              name="radioValue"
            >
              <div
                class="input"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name=""
                    type="radio"
                    value="option1"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 1
                </label>
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    name=""
                    type="radio"
                    value="option2"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Option 2
                </label>
              </div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="textAreaValue-2"
        >
          <label
            class="bp3-label"
            for="textAreaValue"
          >
            TextArea
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
            >
              <textarea
                class="bp3-input input"
              />
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="#009dff"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
